--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "MCUFRIEND_kbv"]
 	path = MCUFRIEND_kbv
-	url = https://github.com/prenticedavid/MCUFRIEND_kbv.git
+	url = https://github.com/Kieran-Weaver/MCUFRIEND_kbv
