--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "MCUFRIEND_kbv"]
-	path = MCUFRIEND_kbv
-	url = https://github.com/Kieran-Weaver/MCUFRIEND_kbv
+[submodule "TFT_ILI9163"]
+	path = TFT_ILI9163
+	url = https://github.com/Kieran-Weaver/TFT_ILI9163
